api: add get payable account endpoint
